--- a/source/DerivedStyles/PlayButton.xaml
+++ b/source/DerivedStyles/PlayButton.xaml
@@ -86,12 +86,23 @@
                                 BorderThickness="{TemplateBinding BorderThickness}"  Background="{TemplateBinding Background}"
                                 Opacity="1" CornerRadius="2,0,0,2" MinHeight="{TemplateBinding MinHeight}" MinWidth="{TemplateBinding MinWidth}"/>
                         <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,5">
-                            <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,5,0">
-                                <TextBlock Margin="0,8,0,0" Text="&#x2193;" Opacity="0.9" FontFamily="Lato"
-                                           FontSize="14" HorizontalAlignment="Center" FontWeight="Light"/>
-                                <TextBlock Text="&#x2423;" Opacity="0.9" FontFamily="&#x2423;" 
-                                           FontSize="25" HorizontalAlignment="Center" FontWeight="Light"/>
-                            </Grid>
+                            <Border Height="22" Margin="0,3,10,0">
+                                <Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Stretch="Uniform">
+                                    <Canvas Name="svg12" Width="256" Height="256" Canvas.Left="0" Canvas.Top="0">
+                                        <Canvas.RenderTransform>
+                                            <TranslateTransform X="0" Y="0"/>
+                                        </Canvas.RenderTransform>
+                                        <Canvas.Resources/>
+                                        <Canvas Name="g6">
+                                            <Line xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" X1="129" Y1="182" X2="129" Y2="24" StrokeThickness="12" Stroke="#FFFFFFFF" StrokeMiterLimit="10" StrokeStartLineCap="Round" StrokeEndLineCap="Round"/>
+                                            <Polyline xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Points="174.25,141.25 128.732,183.625 84.25,141.25" FillRule="NonZero" StrokeThickness="12" Stroke="#FFFFFFFF" StrokeMiterLimit="10" StrokeStartLineCap="Round" StrokeEndLineCap="Round"/>
+                                        </Canvas>
+                                        <Canvas Name="g10">
+                                            <Polyline xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Points="23.25,173.5 23.25,235.75 234.75,235.75 234.75,173.5" FillRule="NonZero" StrokeThickness="12" Stroke="#FFFFFFFF" StrokeMiterLimit="10" StrokeStartLineCap="Round" StrokeEndLineCap="Round"/>
+                                        </Canvas>
+                                    </Canvas>
+                                </Viewbox>
+                            </Border>
                             <ContentPresenter RecognizesAccessKey="True" VerticalAlignment="Center"/>
                         </DockPanel>
                     </Grid>
