--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -16,26 +16,88 @@
                                   d:DataContext="{x:Static DesignMainViewModel.DesignSelectedGameDetailsIntance}">
                         <Grid>
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="{Settings CalculatedGameDetailsIndentation}"/>
+                                <RowDefinition Height="1"/>
+                                <RowDefinition Height="1"/>
+                                <RowDefinition Height="1"/>
                             </Grid.RowDefinitions>
                             <Grid Grid.Row="0">
-                                <FadeImage x:Name="PART_ImageBackground" Stretch="UniformToFill" Height="{Settings CalculatedGameDetailsIndentation}"
+                                <Border Background="#141414" Height="{Settings CalculatedGameDetailsIndentation}"/>
+                                <StackPanel>
+                                    <FadeImage x:Name="PART_ImageBackground" Stretch="UniformToFill" Height="{Settings CalculatedGameDetailsIndentation}"
                                            MinHeight="320"
                                        HorizontalAlignment="Left" VerticalAlignment="Center">
-                                    <FadeImage.ImageOpacityMask>
-                                        <RadialGradientBrush GradientOrigin="0.5,0" Center="0.5,0" RadiusX="2" RadiusY="0.9">
-                                            <RadialGradientBrush.GradientStops>
-                                                <GradientStop Color="Black" Offset="0.3" />
-                                                <GradientStop Color="Transparent" Offset="1" />
-                                            </RadialGradientBrush.GradientStops>
-                                        </RadialGradientBrush>
-                                    </FadeImage.ImageOpacityMask>
-                                </FadeImage>
+                                        <FadeImage.ImageOpacityMask>
+                                            <RadialGradientBrush GradientOrigin="0.5,0" Center="0.5,0" RadiusX="2" RadiusY="0.9">
+                                                <RadialGradientBrush.GradientStops>
+                                                    <GradientStop Color="Black" Offset="0.3" />
+                                                    <GradientStop Color="Transparent" Offset="1" />
+                                                </RadialGradientBrush.GradientStops>
+                                            </RadialGradientBrush>
+                                        </FadeImage.ImageOpacityMask>
+                                    </FadeImage>
+
+                                    <!--Fast Blur-->
+                                    <Grid x:Name="MainGrid" Grid.Row="0" Grid.RowSpan="3" Height="1200">
+                                        <Grid Visibility="Visible">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="16*"/>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="16*"/>
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="16*"/>
+                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="16*"/>
+                                            </Grid.RowDefinitions>
+                                            <Grid Grid.Column="1" Grid.Row="1" RenderTransformOrigin="0.5,0.5">
+                                                <Grid.RenderTransform>
+                                                    <TransformGroup>
+                                                        <ScaleTransform ScaleX="34" ScaleY="34"/>
+                                                        <SkewTransform/>
+                                                        <RotateTransform/>
+                                                        <TranslateTransform/>
+                                                    </TransformGroup>
+                                                </Grid.RenderTransform>
+                                                <FadeImage x:Name="Fade" Visibility="Visible" Grid.Row="1" Grid.Column="1" Source="{Binding Game.DisplayBackgroundImageObject}" Stretch="UniformToFill" 
+                                                        IsBlurEnabled="True" BlurAmount="{Binding ElementName=SizeGridBlur, Path=ActualHeight}" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+                                                    <FadeImage.RenderTransform>
+                                                        <TransformGroup>
+                                                            <ScaleTransform ScaleX="1" ScaleY="1"/>
+                                                            <SkewTransform/>
+                                                            <RotateTransform/>
+                                                            <TranslateTransform />
+                                                        </TransformGroup>
+                                                    </FadeImage.RenderTransform>
+                                                </FadeImage>
+                                            </Grid>
+                                            <Grid x:Name="SizeGrid" Grid.Row="1" Grid.Column="1" Visibility="Hidden">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="16*"/>
+                                                    <ColumnDefinition Width="*"/>
+                                                </Grid.ColumnDefinitions>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="6*"/>
+                                                    <RowDefinition Height="*"/>
+                                                </Grid.RowDefinitions>
+                                                <Grid x:Name="SizeGridSecond" Grid.Row="1" Grid.Column="1"/>
+                                                <StackPanel x:Name="SizeGridBlur" Grid.Row="1" Grid.Column="1" MinHeight="5">
+                                                    <Grid Height="1"/>
+                                                    <Grid Height="{Binding ElementName=SizeGridSecond, Path=ActualHeight}"/>
+                                                    <Grid Height="{Binding ElementName=SizeGridSecond, Path=ActualWidth}"/>
+                                                </StackPanel>
+                                            </Grid>
+                                        </Grid>
+                                    </Grid>
+                                    <!--end Fast blur-->
+                                </StackPanel>
                             </Grid>
+
+
+                            
+                            <Border Grid.Row="1" Grid.RowSpan="2" Background="{DynamicResource BackdropGlass}" />
                             <Grid Grid.Row="1">
-                                <Border Padding="10">
+                                <Border Padding="10" Background="{DynamicResource DetailsSectionBackgroundBrush}">
                                     <DockPanel>
                                         <DockPanel HorizontalAlignment="Left"  VerticalAlignment="Center"
                                                     Margin="0,0,0,0" DockPanel.Dock="Left">
@@ -140,27 +202,23 @@
                                         </DockPanel>
 
                                         <DockPanel DockPanel.Dock="Right" VerticalAlignment="Center" Margin="0,0,0,0">
-                                            <Button x:Name="PART_ButtonEditGame" Background="{DynamicResource DetailsViewOverviewHeaderButtonsBrush}"
-                                                    Opacity="{DynamicResource DetailsViewOverviewHeaderButtonsOpacity}"
-                                                    Margin="0,0,0,0" Height="32" Width="32" Focusable="False"
-                                                    FontFamily="{DynamicResource FontIcoFont}" Padding="7">
-                                                <Button.Content>
-                                                    <Viewbox Stretch="Uniform">
-                                                        <Canvas Name="Layer_1" Width="256" Height="256" Canvas.Left="0" Canvas.Top="0">
-                                                            <Canvas.RenderTransform>
-                                                                <TranslateTransform X="305.5" Y="-396.5"/>
-                                                            </Canvas.RenderTransform>
-                                                            <Path Fill="#ffffff" Opacity="0.5">
-                                                                <Path.Data>
-                                                                    <PathGeometry Figures="M-232.755 589.942l3.103 2.408c5.78 4.492 11.973 8.18 18.409 10.959l3.581 1.547l2.276 33.783 c0.089 1.33 1.385 2.54 2.715 2.54h48.62c1.355 0 2.745-1.273 2.852-2.621l2.74-33.284l3.602-1.496 c6.406-2.656 12.646-6.262 18.554-10.707l3.137-2.366l30.578 15.009c1.155 0.571 2.924 0.017 3.563-1.087l24.303-42.1 c0.674-1.173 0.265-3.014-0.852-3.785l-27.872-19.309l0.469-3.832c0.495-4.032 0.725-7.395 0.725-10.57 c0-3.129-0.227-6.5-0.687-10.307l-0.469-3.896l28.699-19.253c1.112-0.741 1.509-2.473 0.84-3.627l-24.3-42.104 c-0.657-1.139-2.502-1.727-3.7-1.155l-31.208 14.748l-3.091-2.341c-5.571-4.224-11.466-7.688-17.522-10.306l-3.58-1.548 l-2.34-34.887c-0.089-1.33-1.381-2.536-2.715-2.536h-48.617c-1.355 0-2.74 1.274-2.851 2.626l-2.834 34.371l-3.593 1.501 c-6.082 2.535-12.028 5.924-17.667 10.071l-3.124 2.302l-31.392-15.413c-1.168-0.575-2.924-0.025-3.559 1.074l-24.309 42.107 c-0.678 1.172-0.264 3.014 0.848 3.781l28.068 19.444l-0.524 3.883c-0.592 4.378-0.865 8.018-0.865 11.462 c0 2.988 0.179 6.065 0.55 9.403l0.431 3.853l-28.528 19.125c-1.108 0.742-1.509 2.468-0.84 3.632l24.308 42.1 c0.656 1.142 2.489 1.726 3.7 1.154L-232.755 589.942z M-177.498 560.051c-19.311 0-35.02-15.709-35.02-35.02 s15.709-35.02 35.02-35.02s35.02 15.709 35.02 35.02S-158.188 560.051-177.498 560.051z" FillRule="NonZero"/>
-                                                                </Path.Data>
-                                                            </Path>
-                                                        </Canvas>
-                                                    </Viewbox>
-                                                </Button.Content>
-                                            </Button>
+                                            <Button x:Name="PART_ButtonEditGame" Focusable="False" Height="32" Width="32"
+                                                    FontFamily="{DynamicResource FontIcoFont}" Style="{DynamicResource GameEditButton}" Margin="0,0,10,0"/>
+                                            <ToggleButton Focusable="False" Height="32" Width="32" Style="{DynamicResource PannelToggleButton}"/>
                                         </DockPanel>
                                         <Border/>
+                                    </DockPanel>
+                                </Border>
+                            </Grid>
+                            
+                            <Grid Grid.Row="2">
+                                <Border Background="{DynamicResource GameInfoContainerBackgroundBrush}"/>
+                                <Border Height="{Settings GameDetailsCoverHeight}" Padding="15,10,15,10">
+                                    <DockPanel LastChildFill="False">
+                                    <Image Name="PART_ImageCover" VerticalAlignment="Bottom"
+                                            DockPanel.Dock="Left"
+                                            StretchDirection="DownOnly" Stretch="Uniform"
+                                            RenderOptions.BitmapScalingMode="Fant" />
                                     </DockPanel>
                                 </Border>
                             </Grid>
