--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -74,7 +74,18 @@
                             </Grid>-->
                             <!--end Fast blur-->
                             <Grid Grid.Row="0">
-                                <Border Background="#141414" Height="{Settings CalculatedGameDetailsIndentation}"/>
+                                <Border Background="#141414" Height="{Settings CalculatedGameDetailsIndentation}">
+                                    <Border.Style>
+                                        <Style TargetType="Border">
+                                            <Setter Property="Visibility" Value="Visible"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Settings DetailsVisibility.BackgroundImage}" Value="False">
+                                                    <Setter Property="Visibility" Value="Hidden"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Border.Style>
+                                </Border>
                                 <StackPanel>
                                     <FadeImage x:Name="PART_ImageBackground" Stretch="UniformToFill" Height="{Settings CalculatedGameDetailsIndentation}"
                                            MinHeight="320"
@@ -106,13 +117,13 @@
                                         <Border Padding="20,10,30,6.5" Background="{DynamicResource DetailsSectionBackgroundBrush}">
                                             <DockPanel>
                                                 <DockPanel HorizontalAlignment="Left"  VerticalAlignment="Center"
-                                                    Margin="0,0,0,0" DockPanel.Dock="Left">
+                                                            Margin="0,0,0,0" DockPanel.Dock="Left">
                                                     <Button Name="PART_ButtonPlayAction"
-                                                    Width="189.5" Height="45" Style="{DynamicResource PlayButton}" />
+                                                            Width="189.5" Height="45" Style="{DynamicResource PlayButton}" />
                                                     <Button Name="PART_ButtonContextAction" 
-                                                    Width="185" Height="45" Style="{DynamicResource ContextButton}"/>
+                                                            Width="185" Height="45" Style="{DynamicResource ContextButton}"/>
                                                     <Button Name="PART_ButtonMoreActions" FontFamily="{DynamicResource FontIcoFont}"
-                                                    Width="24.5" Height="45" Margin="3.5,0,0,0">
+                                                            Width="24.5" Height="45" Margin="3.5,0,0,0">
                                                         <Button.Style>
                                                             <Style TargetType="Button">
                                                                 <Setter Property="Background" Value="{DynamicResource PlayButtonBackgroundBrush}" />
