--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -20,59 +20,6 @@
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
 
-                            <!--Fast Blur-->
-                            <!--<Grid x:Name="MainGrid">
-                                <Grid Visibility="Visible">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="16*"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="16*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="16*"/>
-                                        <RowDefinition Height="*"/>
-                                        <RowDefinition Height="16*"/>
-                                    </Grid.RowDefinitions>
-                                    <Grid Grid.Column="1" Grid.Row="1" RenderTransformOrigin="0.5,0.5">
-                                        <Grid.RenderTransform>
-                                            <TransformGroup>
-                                                <ScaleTransform ScaleX="34" ScaleY="34"/>
-                                                <SkewTransform/>
-                                                <RotateTransform/>
-                                                <TranslateTransform/>
-                                            </TransformGroup>
-                                        </Grid.RenderTransform>
-                                        <FadeImage x:Name="Fade" Visibility="Visible" Grid.Row="1" Grid.Column="1" Source="{Binding Game.DisplayBackgroundImageObject}" Stretch="UniformToFill" Opacity="0.20"
-                                                        IsBlurEnabled="True" BlurAmount="{Binding ElementName=SizeGridBlur, Path=ActualHeight}" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
-                                            <FadeImage.RenderTransform>
-                                                <TransformGroup>
-                                                    <ScaleTransform ScaleX="1" ScaleY="1"/>
-                                                    <SkewTransform/>
-                                                    <RotateTransform Angle="180"/>
-                                                    <TranslateTransform />
-                                                </TransformGroup>
-                                            </FadeImage.RenderTransform>
-                                        </FadeImage>
-                                    </Grid>
-                                    <Grid x:Name="SizeGrid" Grid.Row="1" Grid.Column="1" Visibility="Hidden">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="16*"/>
-                                            <ColumnDefinition Width="*"/>
-                                        </Grid.ColumnDefinitions>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="6*"/>
-                                            <RowDefinition Height="*"/>
-                                        </Grid.RowDefinitions>
-                                        <Grid x:Name="SizeGridSecond" Grid.Row="1" Grid.Column="1"/>
-                                        <StackPanel x:Name="SizeGridBlur" Grid.Row="1" Grid.Column="1" MinHeight="5">
-                                            <Grid Height="1"/>
-                                            <Grid Height="{Binding ElementName=SizeGridSecond, Path=ActualHeight}"/>
-                                            <Grid Height="{Binding ElementName=SizeGridSecond, Path=ActualWidth}"/>
-                                        </StackPanel>
-                                    </Grid>
-                                </Grid>
-                            </Grid>-->
-                            <!--end Fast blur-->
                             <Grid Grid.Row="0">
                                 <Border Background="#141414" Height="{Settings CalculatedGameDetailsIndentation}">
                                     <Border.Style>
@@ -80,6 +27,9 @@
                                             <Setter Property="Visibility" Value="Visible"/>
                                             <Style.Triggers>
                                                 <DataTrigger Binding="{Settings DetailsVisibility.BackgroundImage}" Value="False">
+                                                    <Setter Property="Visibility" Value="Hidden"/>
+                                                </DataTrigger>
+                                                <DataTrigger Binding="{Binding Game.BackgroundImage}" Value="{x:Null}">
                                                     <Setter Property="Visibility" Value="Hidden"/>
                                                 </DataTrigger>
                                             </Style.Triggers>
@@ -103,6 +53,68 @@
                             </Grid>
 
                             <Grid Grid.Row="1">
+                                <Border Opacity="0.38">
+                                    <Border.OpacityMask>
+                                        <LinearGradientBrush StartPoint="0.5, 0.0" EndPoint="0.5, 1.0" >
+                                            <GradientStop Color="Black" Offset="0.8" />
+                                            <GradientStop Color="Transparent" Offset="1" />
+                                        </LinearGradientBrush>
+                                    </Border.OpacityMask>
+                                    <Grid x:Name="MainGrid" Height="600">
+                                        <Grid.Clip>
+                                            <RectangleGeometry Rect="0, 0, 3840, 600" />
+                                        </Grid.Clip>
+                                        <Grid Visibility="Visible">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="6*"/>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="6*"/>
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="6*"/>
+                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="6*"/>
+                                            </Grid.RowDefinitions>
+                                            <Grid Grid.Column="1" Grid.Row="1" RenderTransformOrigin="0.5,0.5" >
+                                                <Grid.RenderTransform>
+                                                    <TransformGroup>
+                                                        <ScaleTransform ScaleX="16" ScaleY="16"/>
+                                                        <SkewTransform/>
+                                                        <RotateTransform/>
+                                                        <TranslateTransform/>
+                                                    </TransformGroup>
+                                                </Grid.RenderTransform>
+                                                <FadeImage x:Name="Fade" Visibility="Visible" Grid.Row="1" Grid.Column="1" Source="{Binding Game.DisplayBackgroundImageObject}" Stretch="UniformToFill" 
+                                                       IsBlurEnabled="True" BlurAmount="{Binding ElementName=SizeGridBlur, Path=ActualHeight}" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+                                                    <FadeImage.RenderTransform>
+                                                        <TransformGroup>
+                                                            <ScaleTransform ScaleX="-1" ScaleY="1"/>
+                                                            <SkewTransform/>
+                                                            <RotateTransform Angle="180"/>
+                                                            <TranslateTransform />
+                                                        </TransformGroup>
+                                                    </FadeImage.RenderTransform>
+                                                </FadeImage>
+                                            </Grid>
+                                            <Grid x:Name="SizeGrid" Grid.Row="1" Grid.Column="1" Visibility="Hidden">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="20*"/>
+                                                    <ColumnDefinition Width="*"/>
+                                                </Grid.ColumnDefinitions>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="20*"/>
+                                                    <RowDefinition Height="*"/>
+                                                </Grid.RowDefinitions>
+                                                <Grid x:Name="SizeGridSecond" Grid.Row="1" Grid.Column="1"/>
+                                                <StackPanel x:Name="SizeGridBlur" Grid.Row="1" Grid.Column="1" MinHeight="5">
+                                                    <Grid Height="1"/>
+                                                    <Grid Height="{Binding ElementName=SizeGridSecond, Path=ActualHeight}"/>
+                                                    <Grid Height="{Binding ElementName=SizeGridSecond, Path=ActualWidth}"/>
+                                                </StackPanel>
+                                            </Grid>
+                                        </Grid>
+                                    </Grid>
+                                </Border>
                                 <Grid Name="BackgroundsGrid">
                                     <Border Background="{DynamicResource BackdropGlass}" Height="380"/>
                                 </Grid>
