--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -93,6 +93,9 @@
 
     <SolidColorBrush x:Key="DetailsViewOverviewHeaderLabelBrush" Color="#ffffff" />
     <SolidColorBrush x:Key="DetailsViewOverviewHeaderTextBlockBrush" Color="#ffffff" />
+    <Color x:Key="DetailsViewContainerLabelColor">#808486</Color>
+    <SolidColorBrush x:Key="DetailsViewContainerLabelBrush" Color="{DynamicResource DetailsViewContainerLabelColor}" />
+    <SolidColorBrush x:Key="DetailsViewContainerTextBrush" Color="#d3d3d3" />
     <SolidColorBrush x:Key="DetailsViewOverviewHeaderButtonsBrush" Color="#DBd3d8e0" />
     
     
